--- a/Views/Admin/EditarProducto.cshtml
+++ b/Views/Admin/EditarProducto.cshtml
@@ -1,13 +1,15 @@
-﻿
+﻿@model CRACKED.Dtos.ProductDto
+
 @{
-    ViewBag.Title = "AgregarProducto";
+    ViewBag.Title = "EditarProducto";
     Layout = "~/Views/Shared/_Layout - Admin.cshtml";
 }
+
 @if (ViewBag.Message != null)
 {
-<div class="alert alert-@ViewBag.MessageType" role="alert">
-    @ViewBag.Message
-</div>}
+    <div class="alert alert-@ViewBag.MessageType" role="alert">
+        @ViewBag.Message
+    </div>}
 <div class="container-fluid d-flex justify-content-center ">
     <div class="form-group p-lg-4 bg rounded shadow" style="max-width: 800px; width: 100%;">
 
@@ -15,35 +17,36 @@
         <h2 style="color:saddlebrown;  font-family: cursive;  font-weight:bold;">
             Datos Producto
         </h2>
-        <form asp-action="AgregarProducto" asp-controller="Admin" method="post">
-            <div class="mb-3">
-                <label for="InputNombreProduc" class="form-label"><h8 style="color:black; ">Nombre</h8> </label>
-                <input type="text" id="InputNombreProduc" name="nombre" class="form-control" placeholder="Nombre Producto">
-            </div>
-            <div class="mb-3">
-                <label for="selectTipo" class="form-label">Tipo</label>
-                <select id="selectTipo" class="form-select" name="IdTipoProducto" aria-label="Default select example">
-                    <option selected>Tipo de producto</option>
-                    <option value="2">Cookiecake</option>
-                    <option value="1">Galleta</option>
-                </select>
-            </div>
-            <div class="mb-3">
-                <label for="InputCantidad" class="form-label"><h8 style="color:black; ">Cantidad</h8> </label>
-                <input type="text" id="InputCantidad" class="form-control" name="Stock" placeholder="Stock para ese producto">
-            </div>
-            <div class="mb-3">
-                <label for="InputPrecio" class="form-label"><h8 style="color:black; ">Precio</h8> </label>
-                <input type="text" id="InputPrecio" class="form-control" name="Precio" placeholder="$Valor unitario">
-            </div>
+        <form asp-action="Editar" asp-controller="Admin" method="post">
+          
+                <div class="mb-3">
+                    <label for="InputNombreProduc" class="form-label"><h8 style="color:black; ">Nombre</h8> </label>
+                    <input type="text" id="InputNombreProduc" name="nombre" class="form-control" placeholder="Nombre Producto" value="@Model.Nombre">
+                </div>
+                <div class="mb-3">
+                    <label for="selectTipo" class="form-label">Tipo</label>
+                    <select id="selectTipo" class="form-select" name="IdTipoProducto" aria-label="Default select example">
+                        <option selected>Tipo de producto</option>
+                        <option value="2">Cookiecake</option>
+                        <option value="1">Galleta</option>
+                    </select>
+                </div>
+                <div class="mb-3">
+                    <label for="InputCantidad" class="form-label"><h8 style="color:black; ">Cantidad</h8> </label>
+                    <input type="text" id="InputCantidad" class="form-control" name="Stock" placeholder="Stock para ese producto" value="@Model.Stock">
+                </div>
+                <div class="mb-3">
+                    <label for="InputPrecio" class="form-label"><h8 style="color:black; ">Precio</h8> </label>
+                    <input type="text" id="InputPrecio" class="form-control" name="Precio" placeholder="$Valor unitario" value="@Model.Precio">
+                </div>
 
 
+            
 
-
-            <div class="col-4 mb-3">
-                <button class="btn btn-primary" type="submit">Guardar</button>
-            </div>
-        </form>
+                <div class="col-4 mb-3">
+                    <button class="btn btn-primary" type="submit">Guardar</button>
+                </div>
+            </form>
     </div>
 </div>
 
@@ -116,3 +119,5 @@
         border-color: saddlebrown;
     }
 </style>
+
+
